<resources>
    <string name="app_name">InstaShare</string>
    <string name="user_info_password">Password</string>
    <string name="user_info_email">Email</string>
    <string name="user_info_username">Username</string>
    <string name="user_info_name">Name</string>
    <string name="user_info_lastName">Last name</string>
    <string name="user_info_birthdate">Birthdate</string>
    <string name="user_info_repeat_password">Repeat password</string>
    <string name="user_info_text">User information</string>
    <string name="user_info_personal">Personal information</string>
    <string name="login_register_text">Still not registered? Register.</string>
    <string name="login_login_text">Log in</string>
    <string name="login_wrong_email_pw">The email or/and password entered are wrong.</string>
    <string name="signup_username_required">Username is required</string>
    <string name="signup_email_required">Email is required</string>
    <string name="signup_password_required">Password is required</string>
    <string name="signup_repeat_password">Repeat password</string>
    <string name="signup_repeat_password_required">Repeat password is required</string>
    <string name="signup_username_not_valid">The entered username is not valid</string>
    <string name="signup_username_repeated">The entered username is already in use</string>
    <string name="signup_password_not_valid">The entered password is not valid</string>
    <string name="signup_email_not_valid">The entered email is not valid</string>
    <string name="signup_email_repeated">The entered email is in use</string>
    <string name="signup_passwords_not_matching">The passwords must match</string>
    <string name="signup_register_text">Register</string>
    <string name="signup_checking_infomartion">Checking information…</string>
    <string name="drawer_menu_posts">Posts</string>
    <string name="drawer_menu_profile">User profile</string>
    <string name="drawer_menu_notifications">Notifications</string>
    <string name="drawer_menu_chats">Chats</string>
    <string name="drawer_menu_share_app">Share application</string>
    <string name="drawer_menu_contact_us">Contact us</string>
    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_following">Following</string>
    <string name="bottom_navigation_search">Search</string>
    <string name="search_fragment_search">Search here</string>
    <string name="post_post">Post</string>
    <string name="post_anonymous">Anonymous</string>
    <string name="post_loading">Loading posts…</string>
    <string name="post_refreshing_failed">It is not possible to refresh the posts.</string>
    <string name="post_likes_single">1 like</string>
    <string name="post_likes_plural">%1$d likes</string>
    <string name="post_comments_single">1 comment</string>
    <string name="post_comments_plural">%1$d comments</string>
    <string name="post_share_message">Do you really want to share this post?</string>
    <string name="post_share_option_ok">Yes</string>
    <string name="post_share_option_cancel">Cancel</string>
    <string name="post_shared_already">You already shared this post.</string>
    <string name="post_shared_text">Have shared a post</string>
    <string name="post_shared_successful">You have shared a post.</string>
    <string name="post_report">Report</string>
    <string name="post_report_text">Write your report here:</string>
    <string name="post_report_send">Send</string>
    <string name="post_report_cancel">Cancel</string>
    <string name="post_report_sent">The report has been sent successfully.</string>
    <string name="post_options_comment">Comment</string>
    <string name="post_options_like">Like</string>
    <string name="post_options_share">Share</string>
    <string name="post_options_see_more">&#160;See more.</string>
    <string name="post_options_see_less">&#160;See less.</string>
    <string name="post_menu_report">Report</string>
    <string name="post_menu_hide">Hide</string>
    <string name="post_menu_favorite">Favorite</string>
    <string name="post_menu_save">Save</string>
    <string name="post_menu_favorite_remove">Remove from favorites posts</string>
    <string name="post_menu_save_remove">Remove from saved posts</string>
    <string name="post_menu_show">Unhide this post</string>
    <string name="post_error_no_saved">You have not saved any post</string>
    <string name="post_error_no_favs">You have not added any favorites</string>
    <string name="post_error_no_post">No posts</string>
    <string name="post_error_no_close_posts">No posts found near you</string>
    <string name="post_title_public">(Public)</string>
    <string name="post_title_favorites">(Favorites)</string>
    <string name="post_title_saved">(Saved)</string>
    <string name="post_settings">Settings</string>
    <string name="post_setting_show_hidden">Show hidden posts: </string>
    <string name="post_setting_radius">Radio search of posts:</string>
    <string name="post_setting_apply">Apply settings</string>
    <string name="post_setting_radius_approximate">Approximate radius: %1$d-%2$dkm</string>
    <string name="comment_write">Write a comment</string>
    <string name="comment_recording_snackbar">Recording audio</string>
    <string name="comment_recording_snackbar_stop">Stop</string>
    <string name="comment_recording_toast">Recording audio, say something!</string>
    <string name="comment_recording_permissions">You must authorize the permission to record an audio.</string>
    <string name="comment_upload_audio_fail">Failure to upload the audio.</string>
    <string name="comment_upload_successful">Successful comment!</string>
    <string name="comment_options_copy">Copy</string>
    <string name="comment_options_delete">Delete</string>
    <string name="comment_options_edit">Edit</string>
    <string name="comment_options_edit_title">Edit your comment</string>
    <string name="comment_options_edit_cancel">Cancel</string>
    <string name="comment_options_edit_edit">Edit</string>
    <string name="comment_options_edit_hint">Write a comment</string>
    <string name="profile_menu_privacy">Privacy</string>
    <string name="profile_menu_background">Change background</string>
    <string name="profile_menu_logout">Log out</string>
    <string name="profile_no_name">No name</string>
    <string name="profile_post_shared_singular">1 post shared</string>
    <string name="profile_post_shared_plural">%1$d posts shared</string>
    <string name="profile_follow">Follow</string>
    <string name="profile_following">Following</string>
    <string name="profile_followers">Followers</string>
    <string name="profile_stop_following">Stop following</string>
    <string name="profile_stop_following_message">Are you sure you want to unfollow this user?</string>
    <string name="profile_stop_following_cancel">Cancel</string>
    <string name="profile_completed_name">%1$s · %2$s</string>
    <string name="profile_age">%1$d years</string>
    <string name="profile_email">Email: %1$s</string>
    <string name="profile_no_description">The user has not written a description.</string>
    <string name="profile_images">Images</string>
    <string name="profile_see_more">See more</string>
    <string name="profile_last_post">Last post shared:</string>
    <string name="profile_view_all">View all</string>
    <string name="profile_no_images">The user has not uploaded any images</string>
    <string name="profile_no_images_privacy">The user does not want to show their images</string>
    <string name="profile_no_posts">The user has not posted anything</string>
    <string name="profile_no_posts_privacy">The user does not want to show their posts</string>
    <string name="profile_change_background_select">Select your favorite image for your background.</string>
    <string name="profile_edit_privacy">Edit privacy</string>
    <string name="profile_edit_following">Show following</string>
    <string name="profile_edit_followers">Show followers</string>
    <string name="profile_edit_email">Show email</string>
    <string name="profile_edit_images">Show images</string>
    <string name="profile_edit_posts">Show posts</string>
    <string name="profile_edit_privacy_information">Here you can edit your privacy and choose what content you want to show or not show to other users of the application.</string>
    <string name="profile_images_no_images">No images</string>
    <string name="profile_user_images">User images</string>
    <string name="profile_images_set_profile">Select as main image</string>
    <string name="profile_profile_image">User image</string>
    <string name="profile_image">Image</string>
    <string name="add_post_share">Share a content</string>
    <string name="add_post_publish">Publish</string>
    <string name="add_post_preview">Preview</string>
    <string name="add_post_align_text">Align the text in the post:</string>
    <string name="add_post_align_up">Up</string>
    <string name="add_post_align_down">Down</string>
    <string name="add_post_publication_opts">Publication options</string>
    <string name="add_post_share_with">Share with: </string>
    <string name="add_post_share_with_all">All</string>
    <string name="add_post_share_with_followers">Followers</string>
    <string name="add_post_share_as">Share as anonymous:</string>
    <string name="add_post_tags">Publication tags</string>
    <string name="add_post_write_tags">Write publication tags</string>
    <string name="add_post_publishing">Publishing…</string>
    <string name="add_post_publishing_done">Successful publication</string>
    <string name="notification_shared">has shared your</string>
    <string name="notification_liked">has liked your</string>
    <string name="notification_commented">has commented your</string>
    <string name="notification_follow">has begun to follow you</string>
    <string name="notification_post">post</string>
    <string name="notification_remove">Remove notification</string>
    <string name="notification_remove_text">Are you sure you want to delete this notification?</string>
    <string name="notification_confirm">Confirm</string>
    <string name="notification_cancel">Cancel</string>
    <string name="chats_coming_soon">Coming soon!</string>
    <string name="tag_travel">Travel</string>
    <string name="tag_sport">Sport</string>
    <string name="tag_entertaiment">Entertaiment</string>
    <string name="tag_groups">Groups</string>
    <string name="tag_photo">Photo</string>
    <string name="tag_video">Video</string>
    <string name="tag_curiosities">Curiosities</string>
    <string name="tag_places">Places</string>
    <string name="tag_party">Party</string>
    <string name="tag_lifestyle">Lifestyle</string>
    <string name="tag_meetings">Meetings</string>
    <string name="tag_work">Work</string>
    <string name="tag_food">Food</string>
    <string name="tag_politic">Politic</string>
    <string name="tag_social">Social</string>
    <string name="tag_animals">Animals</string>
    <string name="action_write_something">Write something…</string>
    <string name="action_add">Add</string>
    <string name="transition_image" translatable="false">image_transition</string>
    <string name="transition_userName" translatable="false">text_username</string>
    <string name="transition_name" translatable="false">text_name</string>
    <string name="transition_email" translatable="false">text_email</string>
    <string name="transition_description" translatable="false">text_description</string>
    <string name="transition_birthdate" translatable="false">text_birthdate</string>
</resources>