<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginEnd="@dimen/general_margin_small"
    android:layout_marginStart="@dimen/general_margin_small"
    android:layout_marginBottom="@dimen/general_margin_small">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImage"
        android:layout_width="@dimen/item_round_image"
        android:layout_height="@dimen/item_round_image"
        android:transitionName="@string/transition_image"
        app:civ_circle_background_color="@color/black"
        tools:src="@mipmap/ic_launcher"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_alignTop="@id/userImage"
        android:layout_alignBottom="@id/userImage"
        android:layout_toEndOf="@id/userImage"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/general_margin_small"
        android:layout_marginEnd="@dimen/general_margin_small"
        android:gravity="center_vertical">


        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/item_margin"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:transitionName="@string/transition_userName"
            tools:text="Pitisflow"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:transitionName="@string/transition_name"
            tools:text="Javier Garcia"/>

    </LinearLayout>




</RelativeLayout>